<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>

    <string name="action_settings">Settings</string>

    <string name="action_map">Map My Location</string>

    <string name="no_data">No Data.</string>

    <string name="get_loc_shared_prefs_btn">Get My Location</string>

    <string name="action_share">Share</string>

    <string name="action_refresh">Refresh</string>

    <string name="title_activity_detail">Up Close</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location (5 digit ZIP Code)</string>

    <string name="pref_location_key" translatable="false">location</string>

    <string name="pref_location_default" translatable="false">90210</string>

    <string name="pref_units_label">Temperature Units</string>

    <string name="pref_units_label_metric">Metric</string>

    <string name="pref_units_label_imperial">Imperial</string>

    <string name="pref_units_key" translatable="false">units</string>

    <string name="pref_units_metric" translatable="false">metric</string>

    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_showMap_title">Show Location On Map..</string>

    <string name="title_settings_activity">Settings</string>

    <string name="settings_title">Settings</string>

    <string name="pref_cat_a_title">Set Location</string>

    <string name="pref_cat_b_title">Select display units (C/F)</string>

    <string name="pref_zip_hint">Enter a valid ZIP code here</string>

    <string name="pref_temp_label">Units</string>

    <string name="pref_temp_key">units</string>

    <string name="pref_temp_default">metric</string>

    <string name="title_share_button">Share..</string>

    <string name="today">Today</string>

    <string name="tomorrow">Tomorrow</string>

    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>

    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>

    <string name="pref_enable_notifications_label">Enable Notifications?</string>

    <string name="pref_enable_notifications_true">Enabled</string>

    <string name="pref_enable_notifications_false">Not Enabled</string>

    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="ads_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
